# itmo-sem2-programming-labs

./: .gitignore  .gitmodules  README.md
lab1/: Polynomial.cpp  Polynomial.h  main.cpp
lab2/: Application.cpp  Application.h  CurlGetter.cpp  CurlGetter.h  FabricJsonHandler.cpp  FabricJsonHandler.h  FreeApiJsonHandler.cpp  FreeApiJsonHandler.h  JsonHandler.h  PaidApiJsonHandler.cpp  PaidApiJsonHandler.h  Source.cpp  Statistics.cpp  Statistics.h
lab3/: CircularBuffer.h  main.cpp
lab4/VisualCube/: Cube.cpp  Cube.h
lab4/shader/: compile_shader.cpp  compile_shader.h
lab5/: .gitignore  CMakeLists.txt  CustomAllocator.h  test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/Tests/: AVLTree.h  test.cpp
